--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+.decorative-lines {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.line {
+  width: 50px;
+  height: 5px;
+  background-color: white;
+}
+
+.star {
+  font-size: 1.5rem;
+  margin: 0 10px;
+}
